feat :1차 이동 동기화

--- a/S1/.gitignore
+++ b/S1/.gitignore
@@ -75,6 +75,7 @@ Content/ParagonGreystone/*
 
 # Compiled source files for the engine to use
 Intermediate/*
+Intermediate/ProjectFiles/*
 Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
